--- a/code/resources/UIs/ui_components_page.ui
+++ b/code/resources/UIs/ui_components_page.ui
@@ -44,7 +44,10 @@
       <number>1</number>
      </property>
      <property name="indentation">
-      <number>15</number>
+      <number>0</number>
+     </property>
+     <property name="uniformRowHeights">
+      <bool>true</bool>
      </property>
      <property name="itemsExpandable">
       <bool>true</bool>
