--- a/code/resources/UIs/ui_bill_page.ui
+++ b/code/resources/UIs/ui_bill_page.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QTreeView" name="uiBillView">
+    <widget class="QTableView" name="uiBillView">
      <property name="minimumSize">
       <size>
        <width>1000</width>
