--- a/code/resources/UIs/ui_bill_page.ui
+++ b/code/resources/UIs/ui_bill_page.ui
@@ -14,6 +14,18 @@
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QTableView" name="uiBillView">
      <property name="minimumSize">
@@ -21,6 +33,9 @@
        <width>1000</width>
        <height>700</height>
       </size>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
