--- a/code/resources/UIs/ui_hardware_editor_page.ui
+++ b/code/resources/UIs/ui_hardware_editor_page.ui
@@ -469,6 +469,9 @@
          <height>700</height>
         </size>
        </property>
+       <property name="alternatingRowColors">
+        <bool>true</bool>
+       </property>
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectItems</enum>
        </property>
