--- a/code/resources/UIs/ui_components_page.ui
+++ b/code/resources/UIs/ui_components_page.ui
@@ -38,7 +38,13 @@
       </size>
      </property>
      <property name="alternatingRowColors">
-      <bool>true</bool>
+      <bool>false</bool>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>25</width>
+       <height>25</height>
+      </size>
      </property>
      <property name="autoExpandDelay">
       <number>1</number>
