--- a/UIs/ComponentsPage/components_page.ui
+++ b/UIs/ComponentsPage/components_page.ui
@@ -31,6 +31,9 @@
    </property>
    <item>
     <widget class="QTreeView" name="uiView">
+     <property name="contextMenuPolicy">
+      <enum>Qt::CustomContextMenu</enum>
+     </property>
      <property name="iconSize">
       <size>
        <width>25</width>
