--- a/UIs/MainWindow/main_window.ui
+++ b/UIs/MainWindow/main_window.ui
@@ -371,6 +371,12 @@
    </property>
   </action>
   <action name="uiActDeprecated">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/deprecated.png</normaloff>:/deprecated.png</iconset>
@@ -380,6 +386,9 @@
    </property>
   </action>
   <action name="uiActLevel">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/lv.png</normaloff>:/lv.png</iconset>
@@ -389,6 +398,9 @@
    </property>
   </action>
   <action name="uiActHash">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/id.png</normaloff>:/id.png</iconset>
