implemented save capabilities, hardware selector, find archive action and archive model, issues in archive view selection

--- a/UIs/ArchivePage/archive_page.ui
+++ b/UIs/ArchivePage/archive_page.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>983</width>
+    <width>337</width>
     <height>815</height>
    </rect>
   </property>
@@ -47,36 +47,6 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <item row="1" column="1" colspan="3">
-       <widget class="QLineEdit" name="uiName"/>
-      </item>
-      <item row="8" column="0">
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>Status:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="11" column="0">
-       <widget class="QLabel" name="label_8">
-        <property name="text">
-         <string>Seller:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="2">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Per Unit:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="1">
-       <widget class="QSpinBox" name="uiQuantity"/>
-      </item>
-      <item row="11" column="1" colspan="3">
-       <widget class="QLineEdit" name="uiSeller"/>
-      </item>
       <item row="6" column="1" colspan="3">
        <widget class="QLineEdit" name="uiType">
         <property name="readOnly">
@@ -84,29 +54,22 @@
         </property>
        </widget>
       </item>
-      <item row="9" column="0">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>Quantity:</string>
+      <item row="9" column="1">
+       <widget class="QSpinBox" name="uiQuantity"/>
+      </item>
+      <item row="0" column="0" colspan="4">
+       <widget class="QLineEdit" name="uiNumberID">
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
-       <widget class="QLabel" name="label_6">
+      <item row="4" column="0" colspan="4">
+       <widget class="QLabel" name="label_10">
         <property name="text">
-         <string>Manufacture:</string>
+         <string>Comment:</string>
         </property>
        </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Name:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="3">
-       <widget class="QSpinBox" name="uiQuantityPackage"/>
       </item>
       <item row="8" column="1" colspan="3">
        <widget class="QComboBox" name="uiStatus"/>
@@ -118,15 +81,21 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0" colspan="4">
-       <widget class="QLabel" name="label_10">
-        <property name="text">
-         <string>Comment:</string>
-        </property>
-       </widget>
-      </item>
       <item row="10" column="1" colspan="3">
        <widget class="QLineEdit" name="uiPrice"/>
+      </item>
+      <item row="3" column="0" colspan="4">
+       <widget class="QPlainTextEdit" name="uiDescription"/>
+      </item>
+      <item row="9" column="3">
+       <widget class="QSpinBox" name="uiQuantityPackage"/>
+      </item>
+      <item row="12" column="0" colspan="4">
+       <widget class="QLabel" name="label_9">
+        <property name="text">
+         <string>Link:</string>
+        </property>
+       </widget>
       </item>
       <item row="7" column="1" colspan="3">
        <widget class="QStackedWidget" name="uiManufacture">
@@ -143,7 +112,7 @@
          <bool>false</bool>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="uiManufacturePage1_2">
          <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -163,7 +132,7 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QLineEdit" name="noneditable_2">
+           <widget class="QLineEdit" name="noneditable">
             <property name="readOnly">
              <bool>true</bool>
             </property>
@@ -189,28 +158,28 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QComboBox" name="editable_2"/>
+           <widget class="QComboBox" name="editable"/>
           </item>
          </layout>
         </widget>
        </widget>
       </item>
-      <item row="0" column="0" colspan="4">
-       <widget class="QLineEdit" name="uiNumberID">
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0" colspan="4">
-       <widget class="QPlainTextEdit" name="uiComment"/>
-      </item>
-      <item row="2" column="0" colspan="4">
-       <widget class="QLabel" name="label_2">
+      <item row="9" column="0">
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Description:</string>
+         <string>Quantity:</string>
         </property>
        </widget>
+      </item>
+      <item row="9" column="2">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Per Unit:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" colspan="3">
+       <widget class="QLineEdit" name="uiName"/>
       </item>
       <item row="6" column="0">
        <widget class="QLabel" name="label_5">
@@ -219,18 +188,63 @@
         </property>
        </widget>
       </item>
-      <item row="12" column="0" colspan="4">
-       <widget class="QLabel" name="label_9">
+      <item row="13" column="0" colspan="4">
+       <widget class="QTextEdit" name="uiLink"/>
+      </item>
+      <item row="8" column="0">
+       <widget class="QLabel" name="label_7">
         <property name="text">
-         <string>Link:</string>
+         <string>Status:</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0" colspan="4">
-       <widget class="QPlainTextEdit" name="uiDescription"/>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Name:</string>
+        </property>
+       </widget>
       </item>
-      <item row="13" column="0" colspan="4">
-       <widget class="QTextEdit" name="uiLink"/>
+      <item row="5" column="0" colspan="4">
+       <widget class="QPlainTextEdit" name="uiComment"/>
+      </item>
+      <item row="11" column="1" colspan="3">
+       <widget class="QLineEdit" name="uiSeller"/>
+      </item>
+      <item row="11" column="0">
+       <widget class="QLabel" name="label_8">
+        <property name="text">
+         <string>Seller:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" colspan="4">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Description:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Manufacture:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="4">
+       <widget class="QPushButton" name="uiAddBtn">
+        <property name="text">
+         <string>Add</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="4">
+       <widget class="QPushButton" name="uiDelBtn">
+        <property name="text">
+         <string>Delete</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
