--- a/UIs/ArchiveView/archive_view.ui
+++ b/UIs/ArchiveView/archive_view.ui
@@ -29,10 +29,30 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
-      <widget class="QLineEdit" name="uiSearchEntry"/>
+      <widget class="QLineEdit" name="uiSearchEntry">
+       <property name="placeholderText">
+        <string>Search...</string>
+       </property>
+      </widget>
      </item>
      <item>
-      <widget class="QTableView" name="uiView"/>
+      <widget class="QTableView" name="uiView">
+       <property name="alternatingRowColors">
+        <bool>true</bool>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::ExtendedSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+       <attribute name="verticalHeaderStretchLastSection">
+        <bool>false</bool>
+       </attribute>
+      </widget>
      </item>
     </layout>
    </item>
