--- a/UIs/HardwareSelector/hardware_selector.ui
+++ b/UIs/HardwareSelector/hardware_selector.ui
@@ -85,7 +85,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QSpinBox" name="uiQuanity">
+      <widget class="QSpinBox" name="uiQuantity">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -97,6 +97,9 @@
          <width>75</width>
          <height>0</height>
         </size>
+       </property>
+       <property name="minimum">
+        <number>1</number>
        </property>
       </widget>
      </item>
