--- a/UIs/main_window/main_window.ui
+++ b/UIs/main_window/main_window.ui
@@ -14,116 +14,123 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout_5">
     <property name="spacing">
-     <number>0</number>
+     <number>5</number>
     </property>
     <property name="leftMargin">
-     <number>0</number>
+     <number>5</number>
     </property>
     <property name="topMargin">
-     <number>0</number>
+     <number>5</number>
     </property>
     <property name="rightMargin">
-     <number>0</number>
+     <number>5</number>
     </property>
     <property name="bottomMargin">
      <number>0</number>
     </property>
     <item>
-     <widget class="QTabWidget" name="tabWidget">
-      <property name="currentIndex">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="topMargin">
        <number>0</number>
       </property>
-      <widget class="QWidget" name="ComponentsPage">
-       <attribute name="title">
-        <string>Components</string>
-       </attribute>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <property name="spacing">
-         <number>5</number>
+      <item>
+       <widget class="QTabWidget" name="tabWidget">
+        <property name="currentIndex">
+         <number>0</number>
         </property>
-        <property name="leftMargin">
-         <number>5</number>
-        </property>
-        <property name="topMargin">
-         <number>5</number>
-        </property>
-        <property name="rightMargin">
-         <number>5</number>
-        </property>
-        <property name="bottomMargin">
-         <number>5</number>
-        </property>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="BillPage">
-       <attribute name="title">
-        <string>Bill</string>
-       </attribute>
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <property name="spacing">
-         <number>5</number>
-        </property>
-        <property name="leftMargin">
-         <number>5</number>
-        </property>
-        <property name="topMargin">
-         <number>5</number>
-        </property>
-        <property name="rightMargin">
-         <number>5</number>
-        </property>
-        <property name="bottomMargin">
-         <number>5</number>
-        </property>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="AnalyticsPage">
-       <attribute name="title">
-        <string>Analytics</string>
-       </attribute>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
-        <property name="spacing">
-         <number>5</number>
-        </property>
-        <property name="leftMargin">
-         <number>5</number>
-        </property>
-        <property name="topMargin">
-         <number>5</number>
-        </property>
-        <property name="rightMargin">
-         <number>5</number>
-        </property>
-        <property name="bottomMargin">
-         <number>5</number>
-        </property>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="ArchivePage">
-       <attribute name="title">
-        <string>Archive</string>
-       </attribute>
-       <layout class="QHBoxLayout" name="horizontalLayout_4">
-        <property name="spacing">
-         <number>5</number>
-        </property>
-        <property name="leftMargin">
-         <number>5</number>
-        </property>
-        <property name="topMargin">
-         <number>5</number>
-        </property>
-        <property name="rightMargin">
-         <number>5</number>
-        </property>
-        <property name="bottomMargin">
-         <number>5</number>
-        </property>
-       </layout>
-      </widget>
-     </widget>
+        <widget class="QWidget" name="ComponentsPage">
+         <attribute name="title">
+          <string>Components</string>
+         </attribute>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <property name="spacing">
+           <number>5</number>
+          </property>
+          <property name="leftMargin">
+           <number>5</number>
+          </property>
+          <property name="topMargin">
+           <number>5</number>
+          </property>
+          <property name="rightMargin">
+           <number>5</number>
+          </property>
+          <property name="bottomMargin">
+           <number>5</number>
+          </property>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="BillPage">
+         <attribute name="title">
+          <string>Bill</string>
+         </attribute>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <property name="spacing">
+           <number>5</number>
+          </property>
+          <property name="leftMargin">
+           <number>5</number>
+          </property>
+          <property name="topMargin">
+           <number>5</number>
+          </property>
+          <property name="rightMargin">
+           <number>5</number>
+          </property>
+          <property name="bottomMargin">
+           <number>5</number>
+          </property>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="AnalyticsPage">
+         <attribute name="title">
+          <string>Analytics</string>
+         </attribute>
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <property name="spacing">
+           <number>5</number>
+          </property>
+          <property name="leftMargin">
+           <number>5</number>
+          </property>
+          <property name="topMargin">
+           <number>5</number>
+          </property>
+          <property name="rightMargin">
+           <number>5</number>
+          </property>
+          <property name="bottomMargin">
+           <number>5</number>
+          </property>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="ArchivePage">
+         <attribute name="title">
+          <string>Archive</string>
+         </attribute>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <property name="spacing">
+           <number>5</number>
+          </property>
+          <property name="leftMargin">
+           <number>5</number>
+          </property>
+          <property name="topMargin">
+           <number>5</number>
+          </property>
+          <property name="rightMargin">
+           <number>5</number>
+          </property>
+          <property name="bottomMargin">
+           <number>5</number>
+          </property>
+         </layout>
+        </widget>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -148,6 +155,7 @@
     <addaction name="uiActClear"/>
     <addaction name="separator"/>
     <addaction name="uiActExportBill"/>
+    <addaction name="uiActExportArchive"/>
     <addaction name="separator"/>
     <addaction name="uiActArchive"/>
    </widget>
@@ -182,8 +190,9 @@
     <property name="title">
      <string>View</string>
     </property>
-    <addaction name="uiActExpand"/>
-    <addaction name="uiActCollapse"/>
+    <addaction name="uiActExpandAll"/>
+    <addaction name="uiActExpandOne"/>
+    <addaction name="uiActCollapseOne"/>
     <addaction name="separator"/>
     <addaction name="uiActDeprecated"/>
    </widget>
@@ -240,8 +249,8 @@
    <addaction name="uiActMorph"/>
    <addaction name="uiActUpdate"/>
    <addaction name="separator"/>
-   <addaction name="uiActExpand"/>
-   <addaction name="uiActCollapse"/>
+   <addaction name="uiActExpandAll"/>
+   <addaction name="uiActCollapseOne"/>
    <addaction name="uiActDeprecated"/>
    <addaction name="uiActLevel"/>
    <addaction name="uiActHash"/>
@@ -354,7 +363,7 @@
     <string>Update Special Components</string>
    </property>
   </action>
-  <action name="uiActExpand">
+  <action name="uiActExpandAll">
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/expand.png</normaloff>:/expand.png</iconset>
@@ -363,13 +372,13 @@
     <string>Expand All</string>
    </property>
   </action>
-  <action name="uiActCollapse">
+  <action name="uiActCollapseOne">
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/collapse.png</normaloff>:/collapse.png</iconset>
    </property>
    <property name="text">
-    <string>Collapse All</string>
+    <string>Collapse Next Level</string>
    </property>
   </action>
   <action name="uiActDeprecated">
@@ -477,6 +486,16 @@
   <action name="uiActArchive">
    <property name="text">
     <string>Find Archive</string>
+   </property>
+  </action>
+  <action name="uiActExportArchive">
+   <property name="text">
+    <string>Export Archive</string>
+   </property>
+  </action>
+  <action name="uiActExpandOne">
+   <property name="text">
+    <string>Expand Next Level</string>
    </property>
   </action>
  </widget>
