created new file_selector and entries_list widgets. created new widget folder and moved inside it the 2 new widgets as well as archive_view and component_editor. created but not fully implemented settings_window, implemented archive selection, status and manufacture editing, import and esport settings buttons. added testing and cad polishing status entries

--- a/UIs/main_window/main_window.ui
+++ b/UIs/main_window/main_window.ui
@@ -157,7 +157,7 @@
     <addaction name="uiActExportBill"/>
     <addaction name="uiActExportArchive"/>
     <addaction name="separator"/>
-    <addaction name="uiActArchive"/>
+    <addaction name="uiActSettings"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -450,11 +450,6 @@
     <string>Add Placeholder</string>
    </property>
   </action>
-  <action name="uiActArchive">
-   <property name="text">
-    <string>Find Archive</string>
-   </property>
-  </action>
   <action name="uiActExportArchive">
    <property name="text">
     <string>Export Archive</string>
@@ -463,6 +458,11 @@
   <action name="uiActExpandOne">
    <property name="text">
     <string>Expand Next Level</string>
+   </property>
+  </action>
+  <action name="uiActSettings">
+   <property name="text">
+    <string>Settings...</string>
    </property>
   </action>
  </widget>
