changed file selector lineedit to readonly, refactored settings window and recent files functions of main window

--- a/UIs/widgets/file_selector/file_selector.ui
+++ b/UIs/widgets/file_selector/file_selector.ui
@@ -38,6 +38,9 @@
      <property name="text">
       <string/>
      </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
      <property name="placeholderText">
       <string>Path...</string>
      </property>
